namespace PureMVPTestbed.Game
{
    public class GameModel : IGameModel
    {
    }
}